--- a/teacher_dashboard.html
+++ b/teacher_dashboard.html
@@ -1,3 +1,4 @@
+<!-- teacher_dashboard.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -16,49 +17,49 @@
     header {
       background-color: #006893;
       color: white;
-      padding: 20px;
+      padding: 15px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       flex-wrap: wrap;
     }
 
     .logo {
       display: flex;
       align-items: center;
-      gap: 10px;
-      font-size: 2rem;
+      font-size: 1.8rem;
       font-weight: bold;
+      gap: 10px;
     }
 
     .logo-img {
-      height: 45px;
+      height: 40px;
     }
 
     nav {
       display: flex;
-      gap: 15px;
       flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
     }
 
     nav a {
       color: white;
-      text-decoration: none;
-      padding: 10px 20px;
-      border-radius: 25px;
       background-color: #1d5deb;
-      transition: background-color 0.3s, transform 0.3s;
+      padding: 8px 16px;
+      border-radius: 20px;
+      text-decoration: none;
+      font-size: 0.95rem;
+      transition: background-color 0.3s;
     }
 
     nav a:hover {
       background-color: #184cbc;
-      transform: scale(1.05);
     }
 
     main {
-      padding: 30px 20px;
-      max-width: 1200px;
+      padding: 20px;
+      max-width: 1000px;
       margin: 0 auto;
     }
 
@@ -70,11 +71,12 @@
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
     }
 
     .profile-info {
       flex: 2;
+      min-width: 280px;
     }
 
     .profile-photo {
@@ -85,7 +87,7 @@
     }
 
     .profile-photo img {
-      max-width: 200px;
+      max-width: 160px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
@@ -95,16 +97,22 @@
       color: #888;
     }
 
+    .table-wrapper {
+      overflow-x: auto;
+    }
+
     .table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
+      min-width: 500px;
     }
 
     .table th, .table td {
       border: 1px solid #ccc;
-      padding: 10px;
+      padding: 8px;
       text-align: left;
+      font-size: 0.95rem;
     }
 
     .table th {
@@ -114,42 +122,20 @@
     .btn {
       display: inline-block;
       margin-top: 20px;
-      padding: 10px 20px;
+      padding: 10px 16px;
       background-color: #1d5deb;
       color: white;
       text-decoration: none;
-      border-radius: 25px;
+      border-radius: 20px;
       transition: background-color 0.3s;
+      font-size: 0.95rem;
     }
 
     .btn:hover {
       background-color: #184cbc;
     }
 
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .logo {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        flex-direction: column;
-        align-items: flex-start;
-        width: 100%;
-        margin-top: 10px;
-      }
-
-      nav a {
-        width: 100%;
-        text-align: center;
-        margin: 5px 0;
-      }
-
+    @media (max-width: 600px) {
       .profile-wrapper {
         flex-direction: column;
         align-items: center;
@@ -158,6 +144,16 @@
       .profile-photo img {
         max-width: 100%;
       }
+
+      nav {
+        flex-direction: column;
+        width: 100%;
+      }
+
+      nav a {
+        width: 100%;
+        text-align: center;
+      }
     }
   </style>
 </head>
@@ -165,12 +161,12 @@
 
 <header>
   <div class="logo">
-    <img src="img/logo.png" alt="Логотип МойПедагог" class="logo-img">
+    <img src="img/logo.png" alt="Логотип" class="logo-img">
     <span>МойПедагог</span>
   </div>
   <nav>
-    <a href="edit_teacher.html" class="btn">Редактировать анкету</a>
-    <a href="#" id="logoutBtn" class="btn">Выйти</a>
+    <a href="edit_teacher.html">Редактировать анкету</a>
+    <a href="#" id="logoutBtn">Выйти</a>
   </nav>
 </header>
 
@@ -181,12 +177,20 @@
   <hr>
 
   <h3>Расписание</h3>
-  <table class="table">
-    <thead>
-      <tr><th>День</th><th>Урок</th><th>Предмет</th><th>Кабинет</th></tr>
-    </thead>
-    <tbody id="scheduleTable"></tbody>
-  </table>
+  <div class="table-wrapper">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>День</th>
+          <th>Урок</th>
+          <th>Предмет</th>
+          <th>Кабинет</th>
+          <th>Группа</th>
+        </tr>
+      </thead>
+      <tbody id="scheduleTable"></tbody>
+    </table>
+  </div>
 
   <a href="schedule.html" class="btn">Добавить расписание</a>
 </main>
@@ -204,39 +208,66 @@
 
   const teacherData = JSON.parse(localStorage.getItem("teacher_" + currentUser.username));
   if (teacherData) {
-    const infoHtml = `
+    const fields = [
+      { label: "Фамилия", key: "last_name" },
+      { label: "Имя", key: "first_name" },
+      { label: "Отчество", key: "middle_name" },
+      { label: "Дата рождения", key: "birth_date" },
+      { label: "Email", key: "email" },
+      { label: "Телефон", key: "phone" },
+      { label: "Должность", key: "position" },
+      { label: "Кафедра", key: "department" },
+      { label: "Образование", key: "education" },
+      { label: "Квалификация", key: "qualification" },
+      { label: "Стаж работы", key: "work_experience" },
+      { label: "Предметы", key: "subjects" },
+      { label: "Методы преподавания", key: "teaching_methods" },
+      { label: "Научная деятельность", key: "scientific_activity" }
+    ];
+
+    let infoTable = "";
+    fields.forEach(field => {
+      const value = teacherData[field.key];
+      if (value) {
+        infoTable += `<tr><th>${field.label}</th><td>${value}</td></tr>`;
+      }
+    });
+
+    const profileHTML = `
       <div class="profile-wrapper">
         <div class="profile-info">
           <h3>Ваша анкета</h3>
-          <table class="table">
-            <tr><th>Фамилия</th><td>${teacherData.last_name || ''}</td></tr>
-            <tr><th>Имя</th><td>${teacherData.first_name || ''}</td></tr>
-            <tr><th>Отчество</th><td>${teacherData.middle_name || ''}</td></tr>
-            <tr><th>Дата рождения</th><td>${teacherData.birth_date || ''}</td></tr>
-            <tr><th>Email</th><td>${teacherData.email || ''}</td></tr>
-            <tr><th>Телефон</th><td>${teacherData.phone || ''}</td></tr>
-            <tr><th>Должность</th><td>${teacherData.position || ''}</td></tr>
-            <tr><th>Кафедра</th><td>${teacherData.department || ''}</td></tr>
-            <tr><th>Образование</th><td>${teacherData.education || ''}</td></tr>
-            <tr><th>Квалификация</th><td>${teacherData.qualification || ''}</td></tr>
-            <tr><th>Стаж работы</th><td>${teacherData.work_experience || ''}</td></tr>
-            <tr><th>Предметы</th><td>${teacherData.subjects || ''}</td></tr>
-            <tr><th>Методы преподавания</th><td>${teacherData.teaching_methods || ''}</td></tr>
-            <tr><th>Научная деятельность</th><td>${teacherData.scientific_activity || ''}</td></tr>
-          </table>
+          <div class="table-wrapper">
+            <table class="table">${infoTable}</table>
+          </div>
         </div>
         <div class="profile-photo">
           ${teacherData.profile_photo ? `<img src="${teacherData.profile_photo}" alt="Фото">` : '<div class="photo-placeholder">Фото не загружено</div>'}
         </div>
-      </div>`;
-    document.getElementById("teacherInfo").innerHTML = infoHtml;
+      </div>
+    `;
+    document.getElementById("teacherInfo").innerHTML = profileHTML;
   }
 
-  const schedule = JSON.parse(localStorage.getItem("schedule_" + currentUser.username)) || [];
+  const scheduleKey = "schedule_" + currentUser.username;
+  const schedule = JSON.parse(localStorage.getItem(scheduleKey)) || [];
+
+  const dayOrder = ['Понедельник', 'Вторник', 'Среда', 'Четверг', 'Пятница', 'Суббота'];
+  schedule.sort((a, b) => {
+    return dayOrder.indexOf(a.day_of_week) - dayOrder.indexOf(b.day_of_week) ||
+           a.lesson_number - b.lesson_number;
+  });
+
   const tbody = document.getElementById("scheduleTable");
   schedule.forEach(row => {
     const tr = document.createElement("tr");
-    tr.innerHTML = `<td>${row.day_of_week}</td><td>${row.lesson_number}</td><td>${row.subject}</td><td>${row.room}</td>`;
+    tr.innerHTML = `
+      <td>${row.day_of_week}</td>
+      <td>${row.lesson_number}</td>
+      <td>${row.subject}</td>
+      <td>${row.room}</td>
+      <td>${row.group || '-'}</td>
+    `;
     tbody.appendChild(tr);
   });
 </script>
