--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -5,223 +5,196 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Панель студента</title>
   <style>
-  /* === ШАПКА === */
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(0, 104, 147);
-    padding: 15px 30px;
-    color: white;
-    font-weight: 700;
-    font-size: 1.2rem;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-
-/* ДОБАВЛЕННЫЕ СТИЛИ ЛОГОТИПА */
-header .logo {
-    display: flex;
-    align-items: center;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.7rem;
-    font-weight: bold;
-    gap: 10px;
-    letter-spacing: 1px;
-}
-
-.logo-img {
-    height: 40px;
-}
-
-header nav a {
-    margin-left: 15px;
-    padding: 8px 18px;
-    border-radius: 25px;
-    font-weight: 600;
-    text-decoration: none;
-    transition: all 0.3s ease;
-}
-
-header nav a.btn-primary {
-    background-color: #1d5deb;
-    color: white;
-}
-
-header nav a.btn-primary:hover {
-    background-color: #184cbc;
-    transform: scale(1.05);
-}
-
-header nav a.btn-secondary {
-    background-color: #7f8c8d;
-    color: white;
-}
-
-header nav a.btn-secondary:hover {
-    background-color: #636e72;
-    transform: scale(1.05);
-}
-
-/* === ОБЩИЕ СТИЛИ === */
-body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #f0f8ff;
-    margin: 0;
-    padding: 0;
-    color: #333;
-    line-height: 1.6;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 2rem auto;
-    padding: 20px;
-    background-color: white;
-    border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-}
-
-/* === ЗАГОЛОВКИ === */
-h1, h2, h3 {
-    color: rgb(0, 104, 147);
-    margin-bottom: 15px;
-    font-weight: 700;
-}
-
-/* === КНОПКИ === */
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    border-radius: 25px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: all 0.3s ease;
-    margin-right: 10px;
-    font-size: 0.9rem;
-}
-
-.btn-primary {
-    background-color: rgb(29, 93, 235);
-    color: white;
-}
-
-.btn-primary:hover {
-    background-color: rgb(24, 76, 188);
-    transform: scale(1.05);
-}
-
-.btn-secondary {
-    background-color: #7f8c8d;
-    color: white;
-}
-
-.btn-secondary:hover {
-    background-color: #636e72;
-    transform: scale(1.05);
-}
-
-.btn-info {
-    background-color: #3498db;
-    color: white;
-}
-
-.btn-info:hover {
-    background-color: #2980b9;
-    transform: scale(1.05);
-}
-
-/* === ТАБЛИЦА === */
-.table,
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
-
-.table th, .table td,
-table th, table td {
-    padding: 12px;
-    border: 1px solid #ccc;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 0.95rem;
-}
-
-.table th,
-table th {
-    background-color: rgb(0, 104, 147);
-    color: white;
-    text-transform: uppercase;
-}
-
-table tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-/* === АДАПТИВНОСТЬ === */
-@media (max-width: 768px) {
+    /* === ШАПКА === */
     header {
-        flex-direction: column;
-        align-items: flex-start;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: rgb(0, 104, 147);
+      padding: 15px 30px;
+      color: white;
+      font-weight: 700;
+      font-size: 1.2rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
-    header nav {
+    header .logo {
+      display: flex;
+      align-items: center;
+      font-family: 'Roboto Slab', serif;
+      font-size: 1.7rem;
+      font-weight: bold;
+      gap: 10px;
+      letter-spacing: 1px;
+    }
+
+    .logo-img {
+      height: 40px;
+    }
+
+    header nav a {
+      margin-left: 15px;
+      padding: 8px 18px;
+      border-radius: 25px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+
+    header nav a.btn-secondary {
+      background-color: #7f8c8d;
+      color: white;
+    }
+
+    header nav a.btn-secondary:hover {
+      background-color: #636e72;
+      transform: scale(1.05);
+    }
+
+    /* === ОБЩИЕ СТИЛИ === */
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f0f8ff;
+      margin: 0;
+      padding: 0;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+
+    h1, h2, h3 {
+      color: rgb(0, 104, 147);
+      margin-bottom: 15px;
+      font-weight: 700;
+    }
+
+    /* === КНОПКИ === */
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: all 0.3s ease;
+      margin-right: 10px;
+      font-size: 0.9rem;
+    }
+
+    .btn-secondary {
+      background-color: #7f8c8d;
+      color: white;
+    }
+
+    .btn-secondary:hover {
+      background-color: #636e72;
+      transform: scale(1.05);
+    }
+
+    .btn-info {
+      background-color: #3498db;
+      color: white;
+    }
+
+    .btn-info:hover {
+      background-color: #2980b9;
+      transform: scale(1.05);
+    }
+
+    /* === ТАБЛИЦА === */
+    .table-wrapper {
+      margin-top: 20px;
+    }
+
+    .table-responsive {
+      overflow-x: auto;
+      width: 100%;
+    }
+
+    .table,
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      min-width: 600px;
+    }
+
+    .table th, .table td,
+    table th, table td {
+      padding: 12px;
+      border: 1px solid #ccc;
+      text-align: center;
+      vertical-align: middle;
+      font-size: 0.95rem;
+    }
+
+    .table th,
+    table th {
+      background-color: rgb(0, 104, 147);
+      color: white;
+      text-transform: uppercase;
+    }
+
+    table tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+
+    /* === АДАПТИВНОСТЬ === */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      header nav {
         margin-top: 10px;
         width: 100%;
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
-    }
+      }
 
-    header nav a {
+      header nav a {
         flex: 1 1 auto;
         text-align: center;
         margin-left: 0;
-    }
+      }
 
-    .btn {
+      .btn {
         display: block;
         width: 100%;
         text-align: center;
         margin-bottom: 10px;
-    }
+      }
 
-    .container {
+      .container {
         padding: 15px;
-    }
+      }
 
-    .table th,
-    .table td {
+      .table th,
+      .table td {
         font-size: 0.85rem;
         padding: 8px;
-    }
-}
-
-    footer {
-    background-color: #006893;
-    color: white;
-    padding: 20px 15px; /* Уменьшил отступы */
-    font-size: 0.9rem; /* Уменьшил размер шрифта */
+      }
     }
 
-    .footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
+    /* === ПРОКРУТКА ДЛЯ ТАБЛИЦЫ === */
+    .table-responsive::-webkit-scrollbar {
+      height: 6px;
     }
 
-    .footer-info p {
-    margin: 5px 0;
-    }
-
-    .footer-bottom {
-    text-align: center;
-    margin-top: 15px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    padding-top: 10px;
-    font-size: 0.85rem; /* Уменьшил размер */
+    .table-responsive::-webkit-scrollbar-thumb {
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 3px;
     }
   </style>
 </head>
@@ -242,20 +215,22 @@ table tr:nth-child(even) {
 
   <h3>Список преподавателей</h3>
   <div class="table-wrapper">
-    <table id="teachers-table">
-      <thead>
-        <tr>
-          <th>Фамилия</th>
-          <th>Имя</th>
-          <th>Отчество</th>
-          <th>Должность</th>
-          <th>Действия</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Заполняется JS -->
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table id="teachers-table">
+        <thead>
+          <tr>
+            <th>Фамилия</th>
+            <th>Имя</th>
+            <th>Отчество</th>
+            <th>Должность</th>
+            <th>Действия</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Заполняется JS -->
+        </tbody>
+      </table>
+    </div>
   </div>
 
   <p id="no-data-msg"></p>
@@ -263,7 +238,6 @@ table tr:nth-child(even) {
 
 <script>
   let teachers = JSON.parse(localStorage.getItem("teachers"));
-
   const tbody = document.querySelector("#teachers-table tbody");
   const noDataMsg = document.getElementById("no-data-msg");
 
@@ -279,7 +253,6 @@ table tr:nth-child(even) {
     tbody.innerHTML = "";
 
     teachers.forEach(t => {
-      // Получаем анкету преподавателя
       const profile = JSON.parse(localStorage.getItem("teacher_" + t.username));
       if (!profile || !profile.first_name || !profile.last_name) return;
 
@@ -289,7 +262,7 @@ table tr:nth-child(even) {
         <td>${profile.first_name || '-'}</td>
         <td>${profile.middle_name || '-'}</td>
         <td>${profile.position || '-'}</td>
-        <td><a class="btn" href="teacher_profile.html?id=${encodeURIComponent(t.user_id)}">Просмотр анкеты</a></td>
+        <td><a class="btn btn-info" href="teacher_profile.html?id=${encodeURIComponent(t.user_id)}">Просмотр анкеты</a></td>
       `;
       tbody.appendChild(tr);
     });
@@ -299,15 +272,10 @@ table tr:nth-child(even) {
     }
   }
 
-  document.getElementById("logout-btn").addEventListener("click", function(e) {
-    // Если вы хотите очищать данные пользователя при выходе — раскомментируйте строку ниже:
-    // localStorage.removeItem("currentUser");
-
-    // Перенаправление на главную
+  document.getElementById("logout-btn").addEventListener("click", function (e) {
+    // localStorage.removeItem("currentUser"); // при необходимости
     window.location.href = "index.html";
   });
-
 </script>
-
 </body>
 </html>
